# tech-letter

./: .dockerignore  .env.example  .gitignore  Dockerfile.aggregate  Dockerfile.api  Dockerfile.chatbot_service  Dockerfile.content_service  Dockerfile.embedding_worker  Dockerfile.processor  Dockerfile.retryworker  Dockerfile.summary_worker  Dockerfile.user_service  README.md  config-example.yaml  config-production.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  run_aggregate_once.sh  run_all.ps1  run_all.sh  run_api.ps1  run_api.sh
chatbot_service/: pyproject.toml
chatbot_service/app/: config.py  main.py  vector_store.py
chatbot_service/app/api/: chat.py
chatbot_service/app/application/: __init__.py
chatbot_service/app/application/chat/: ports.py  use_cases.py
chatbot_service/app/domain/: __init__.py
chatbot_service/app/domain/chat/: __init__.py  policies.py  schemas.py
chatbot_service/app/event_handlers/: context_compression_consumer.py  embed_consumer.py
chatbot_service/app/guards/: __init__.py  output_guard.py  prompt_guard.py  retrieved_content_guard.py  schemas.py
chatbot_service/app/infrastructure/: __init__.py
chatbot_service/app/infrastructure/graph/: __init__.py  langgraph_chat.py
chatbot_service/app/infrastructure/llm/: __init__.py  answer_generator.py  planner.py  prompts.py
chatbot_service/app/infrastructure/tools/: content_posts.py  vector_search.py
chatbot_service/app/services/: content_post_client.py  context_builder.py  conversation_memory.py  post_search_tool.py  rag_service.py  user_session_client.py
chatbot_service/tests/: test_chat_policies.py  test_context_compression_consumer.py  test_conversation_memory.py  test_embed_consumer.py  test_langgraph_chat_workflow.py  test_llm_planner.py  test_post_search_tool.py  test_prompt_guard.py  test_vector_store.py
common/: pyproject.toml
common/common/: logger.py
common/common/eventbus/: config.py  core.py  helpers.py  kafka.py  topics.py
common/common/events/: chat.py  credit.py  post.py
common/common/llm/: factory.py  utils.py
common/common/logger/: __init__.py
common/common/middleware/: request_trace.py
common/common/models/: blog.py  identity_policy.py  post.py  user.py  utils.py
common/common/mongo/: client.py  config.py  types.py
common/common/schemas/: __init__.py  pagination.py
common/common/types/: datetime.py  objectid.py
config/: config.go  logger.go
content_service/: pyproject.toml
db/: mongo.go
docs/: DOCKER_MULTIPLATFORM.md  IDENTITY_POLICY_SYSTEM.md  PRIVACY_POLICY.md  admin.md  auth.md  chatbot_phase1.md  chatbot_phase2.md  (+7 more)
embedding_worker/: pyproject.toml
embedding_worker/app/: cache.py  config.py  embedder.py  main.py
embedding_worker/app/services/: pipeline_service.py
summary_worker/: pyproject.toml
summary_worker/app/: config.py  constants.py  exceptions.py  main.py  parser.py  renderer.py  summarizer.py  validator.py
summary_worker/app/services/: pipeline_service.py
summary_worker/tests/: manual_pipeline_test.py  test_parser.py  test_pipeline.py  test_pipline.py  test_renderer_parser_urls.py  test_validator.py
(+205 files in other folders)
