[project]
name = "techletter-chatbot-service"
version = "0.1.0"
description = "Chatbot service for Tech-Letter RAG chatbot."
requires-python = ">=3.11,<3.12"
dependencies = [
  "techletter-common",
  "fastapi",
  "uvicorn",
  "qdrant-client",
  "langchain-openai",
  "langchain-core",
  "pytest",
]

[project.scripts]
chatbot-service = "app.main:main"

[tool.pytest.ini_options]
pythonpath = [".."]
